# ChangeLog for sys-process/atop
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-process/atop/ChangeLog,v 1.25 2008/06/27 17:20:44 dberkholz Exp $

*atop-1.23 (27 Jun 2008)

  27 Jun 2008; Donnie Berkholz <dberkholz@gentoo.org>; +atop-1.23.ebuild:
  Bump.

*atop-1.22 (16 Feb 2008)

  16 Feb 2008; Mike Frysinger <vapier@gentoo.org> +atop-1.22.ebuild:
  Version bump #210376 by Bram Schoenmakers.

  28 Nov 2007; Christian Faulhammer <opfer@gentoo.org> atop-1.21.ebuild:
  stable x86, bug 200574

  28 Nov 2007; Christoph Mende <angelos@gentoo.org> atop-1.21.ebuild:
  Stable on amd64 wrt bug #200574

  23 Oct 2007; Jeroen Roovers <jer@gentoo.org> atop-1.21.ebuild:
  Stable for HPPA.

  10 Sep 2007; Mike Frysinger <vapier@gentoo.org> atop-1.21.ebuild:
  Fix broken cron.d file #191926 by Jeroen Roovers.

*atop-1.21 (10 Sep 2007)

  10 Sep 2007; Jeroen Roovers <jer@gentoo.org> +atop-1.21.ebuild:
  Version bump.

  10 Aug 2007; Raúl Porcel <armin76@gentoo.org> atop-1.20.ebuild:
  x86 stable

*atop-1.20 (07 Jul 2007)

  07 Jul 2007; Mike Frysinger <vapier@gentoo.org> +atop-1.20.ebuild:
  Version bump #184230.

  05 Jul 2007; Christoph Mende <angelos@gentoo.org> atop-1.19.ebuild:
  Stable on amd64

  04 Jul 2007; Raúl Porcel <armin76@gentoo.org> atop-1.19.ebuild:
  x86 stable

  04 May 2007; Jeroen Roovers <jer@gentoo.org> atop-1.19.ebuild:
  Stable for HPPA.

  12 Apr 2007; Jeroen Roovers <jer@gentoo.org> atop-1.19.ebuild:
  Marked ~hppa too.

  18 Feb 2007; Simon Stelling <blubb@gentoo.org> atop-1.17.ebuild:
  stable on amd64; bug 167154

  16 Feb 2007; Christian Faulhammer <opfer@gentoo.org> atop-1.17.ebuild:
  stable x86; bug 167154

*atop-1.19 (16 Feb 2007)

  16 Feb 2007; Mike Frysinger <vapier@gentoo.org> +atop-1.19.ebuild:
  Version bump #166971 by John Gerritse.

*atop-1.17 (02 Dec 2006)

  02 Dec 2006; Mike Frysinger <vapier@gentoo.org> +atop-1.17.ebuild:
  Version bump #156592 by John Gerritse.
