@@ -1,6 +1,6 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/atop/atop-1.23.ebuild,v 1.1 2008/06/27 17:20:44 dberkholz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-process/atop/atop-1.23.ebuild,v 1.2 2009/03/19 13:19:28 ranger Exp $
 
 DESCRIPTION="Resource-specific view of processes"
 HOMEPAGE="http://www.atcomputing.nl/Tools/atop"
@@ -8,7 +8,7 @@ SRC_URI="http://www.atconsultancy.nl/atop/packages/${P}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~amd64 ~hppa ~x86"
+KEYWORDS="~amd64 ~hppa ~ppc ~x86"
 IUSE=""
 
 DEPEND="sys-process/acct"
