@@ -1,6 +1,9 @@
 # ChangeLog for sys-process/atop
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-process/atop/ChangeLog,v 1.25 2008/06/27 17:20:44 dberkholz Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/sys-process/atop/ChangeLog,v 1.26 2009/03/19 13:19:28 ranger Exp $
+
+  19 Mar 2009; Brent Baude <ranger@gentoo.org> atop-1.23.ebuild:
+  Marking atop-1.23 ~ppc for bug 257306
 
 *atop-1.23 (27 Jun 2008)
 
